<resources>
    <string name="app_name">Application Sports</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="sport1">Badminton</string>
    <string name="sport2">Kung Fu</string>
    <string name="sport3">Béhourd</string>
    <string name="sport4">Basketball</string>
    <string name="sport5">Baseball</string>

    <string name="bouton_retour">Retour</string>

    <string name="badminton_text">"Le badminton est un sport de raquette qui oppose soit deux joueurs (simples),soit deux paires (doubles), placés dans deux demi-terrains séparés par un filet.

    Les joueurs, appelés badistes, marquent des points en frappant un volant à l'aide d'une raquette afin de le faire tomber dans le terrain adverse.

    L'échange se termine dès que le volant touche le sol ou reste accroché dans le filet."</string>

    <string name="kungfu_text">"Les arts martiaux chinois, popularisés sous le nom de kung-fu, également désignés par les termes mandarins wǔshù(武术), guóshù(国术) ou quánfǎ(拳法) et parfois désignés sous le terme de boxes chinoises, sont constitués de centaines de styles différents de combat à main nue ou armée, qui ont été développés en Chine au fil des siècles." </string>

    <string name="behourd_text">"Le béhourd est un sport de combat impliquant l'utilisation d'armes et d'armures issues du Moyen Âge.
    Le terme béhourd vient du vieux français. On trouve dans les textes anciens les formes behort, behourt, behourd, beort, baort, bohort, bohurt, bouhort, bouhourd désignant originellement un combat à la lance, puis au sens général, un 'tournoi'. Il provient du francique *bihordôn signifiant 'espace clotûré (où se déroulent les tournois)'

        La renaissance du béhourd date des années 1990 en Russie. Il s'est peu à peu développé dans les pays d'Europe de l'Est principalement en Biélorussie, en Russie et en Ukraine pour ensuite gagner le reste de l'Europe.
    La principale compétition internationale est la Bataille des Nations de la ligue HMB dans laquelle s'affrontent les équipes nationales, mais également la ligue IMCF, qui est un autre championnat avec des catégories différentes.

        Les armes et l'armure utilisées par un combattant doivent être issues de la même région et de la même époque (1202 et 1999).
    Contrairement aux reconstitutions de batailles historiques, le béhourd est un sport régi par des règles et nécessite la présence d'arbitres.
    Afin de réduire les blessures, le matériel est soigneusement vérifié avant les batailles, toutes les armes sont émoussées.
    Il s'agit d'un sport de combat en duel ou en équipe, pendant les combats de masse, une équipe l'emporte quand elle met ses adversaires à terre. Une fois au sol, il faut attendre la fin du round. Un combat se livre en 2 rounds gagnants. "</string>

    <string name="basketball_text">"Le basket-ball ou basketball, fréquemment désigné en français par son abréviation basket, est un sport de balle et sport collectif opposant deux équipes de cinq joueurs sur un terrain rectangulaire.
    L'objectif de chaque équipe est de faire passer un ballon au sein d'un arceau de 46 cm de diamètre, fixé à un panneau et placé à 3,05 m du sol : le panier.
    Chaque panier inscrit rapporte deux points à son équipe, à l'exception des tirs effectués au-delà de la ligne des trois points qui rapportent trois points et des lancers francs accordés à la suite d'une faute qui rapportent un point.
    L'équipe avec le nombre de points le plus important remporte la partie.

    Le basket-ball se pratique exclusivement à la main, et les joueurs peuvent se déplacer balle en main en la dribblant sur le sol ou en effectuant deux pas maximum sans dribbler.
    L'équipe en possession du ballon (les attaquants) tente d'inscrire des points en réalisant des tirs, des double-pas ou des dunks tandis que l'équipe en défense essaie de les en empêcher en réalisant des interceptions de balle ou des contres.
    Si le tir échoue, les joueurs des deux équipes tentent d'attraper la balle au rebond.

    James Naismith, un professeur d'éducation sportive, invente le basket-ball en 1891 dans l'État du Massachusetts (États-Unis) pour maintenir la condition physique de ses élèves durant l'hiver.
    Le sport devient rapidement populaire et se développe dans les universités et écoles secondaires en Amérique du Nord au début du siècle."</string>

    <string name="baseball_text">"Le baseball est un sport collectif dérivé des mêmes racines que le cricket, qui se pratique sur un terrain de gazon et de sable.
    Il se joue avec des battes pour frapper une balle lancée, et des gants pour rattraper la balle.
    Les origines du baseball prêtent à controverse, mais il est indiscutable que les premières règles modernes (les « Knickerbocker Rules ») ont été codifiées aux États-Unis en 1845. Les racines européennes du jeu, longtemps négligées par les autorités américaines afin de faire du baseball un sport typiquement américain, sont connues de longue date par les historiens américains du sport.
    La récente mise en lumière d'une description d'un match joué en 1755 dans le Surrey (Angleterre) va dans ce sens3."</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>