<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.App_sports.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.App_sports.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_marginTop="60dp"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/sport1" />

            <TextView
                android:layout_marginTop="17dp"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/sport2" />

            <TextView
                android:layout_marginTop="17dp"
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/sport3" />

            <TextView
                android:layout_marginTop="17dp"
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/sport4" />

            <TextView
                android:layout_marginTop="17dp"
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/sport5" />
        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>